--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -57,9 +57,7 @@ http {
   proxy_headers_hash_bucket_size 64;
 
   # List of application servers
-  upstream app_servers {
-    server odoo:8069;
-  }
+  {{ $odoo_host := getenv "NGX_ODOO_HOST" }}
 
   # Configuration for the server
   server {
@@ -71,11 +69,10 @@ http {
     add_header              Strict-Transport-Security "max-age=31536000";
 
     location / {
-      proxy_pass http://odoo:8069;
+      proxy_pass http://{{ $odoo_host }}:8069;
       proxy_read_timeout    6h;
       proxy_connect_timeout 5s;
       proxy_redirect        off;
-      #proxy_redirect        http://$host/ https://$host:$server_port/;
 
       add_header X-Static no;
       proxy_buffer_size 64k;
@@ -85,14 +82,14 @@ http {
       proxy_intercept_errors on;
 
     }
-    location /longpolling/im/poll { proxy_pass http://odoo:8072; }
-    location /longpolling/poll { proxy_pass http://odoo:8072; }
+    location /longpolling/im/poll { proxy_pass http://{{ $odoo_host }}:8072; }
+    location /longpolling/poll { proxy_pass http://{{ $odoo_host }}:8072; }
 
     location ~* /web/static/ {
         proxy_cache_valid 200 60m;
         proxy_buffering on;
         expires 864000;
-        proxy_pass http://odoo:8069;
+        proxy_pass http://{{ $odoo_host }}:8069;
     }
 
   }
