Fix wrong number of arguments in try_files

--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -110,15 +110,15 @@ http {
     location /longpolling/poll { proxy_pass http://{{ $odoo_host }}:8072; }
 
     location ~* /[^/]+/static/ {
-      try_files @cached;
+      try_files @cached /dev/null =404;
     }
 
     location /web/content {
-      try_files @cached;
+      try_files @cached /dev/null =404;
     }
 
     location /website/translations {
-      try_files @cached;
+      try_files @cached /dev/null =404;
     }
 
     location @cached {
