Fix caching of requests with Set-Cookie
Odoo publishes static files with a Set-Cookie header that contains the
session of the user. The cache entry was ignoring the Set-Cookie header
for the key of the entry, but was returning it in the cached response.
Which means that the first user to login would fill the cache with their
cookie. The subsequent users to reach the nginx cache (users having a
browser cache should not be affected) would receive a request containing
a Set-Cookie header of the first user → the browser obtains the
session_id of another user.

The reason was:
* proxy_ignore_headers removes the Set-Cookie from the cache entry key,
but not from the cached response
* proxy_hide_header hides the header in the cached response

Alongside this change, 'proxy_set_header Cookie ""' prevents to pass any
cookie to odoo on static files.

--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -132,7 +132,13 @@ http {
       proxy_cache_lock on;
 
       proxy_buffering on;
+
+      # remove the cookie from the cached payload
+      proxy_hide_header Set-Cookie;
+      # ensure that caching is done by ignoring set-cookie
       proxy_ignore_headers Set-Cookie;
+      proxy_set_header Cookie "";
+
       proxy_cache_bypass $http_cache_control;
       add_header X-Cache-Status $upstream_cache_status;
       
