Cache only .js and .css files on /web/content
The other files on /web/content can depend on the user's permissions

--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -110,7 +110,9 @@ http {
       try_files =404 @cached;
     }
 
-    location /web/content {
+    # warning: /web/content reads ir.attachment, it would not be safe to
+    # cache other files than .js / .css which can depend on users rights
+    location ~* ^/web/content/.+\.(js|css)$ {
       try_files =404 @cached;
     }
 
