--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -109,6 +109,26 @@ http {
       proxy_busy_buffers_size 64k;
       proxy_intercept_errors on;
     }
+   {{ if getenv "NGX_ODOO_EXTRA_LOCATION" }}
+    {{ $odoo_extra_location := getenv "NGX_ODOO_EXTRA_LOCATION" }}
+    {{range jsonArray $odoo_extra_location}}
+    location {{.}} {
+      proxy_pass http://{{ $odoo_host }}:8069;
+      proxy_read_timeout    6h;
+      proxy_connect_timeout 5s;
+      proxy_redirect        off;
+      {{ if getenv "NGX_HTPASSWD" }}
+      auth_basic "Odoo extra location restricted";
+      auth_basic_user_file /etc/nginx/htpasswd;
+      {{ end }}
+      add_header X-Static no;
+      proxy_buffering off;
+      proxy_buffer_size 64k;
+      proxy_busy_buffers_size 64k;
+      proxy_intercept_errors on;
+    }
+   {{ end }}
+   {{ end }}
 
     location /longpolling/im/poll { proxy_pass http://{{ $odoo_host }}:8072; }
     location /longpolling/poll { proxy_pass http://{{ $odoo_host }}:8072; }
