feat: add new location for v16

--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -131,6 +131,7 @@ http {
 
     location /longpolling/im/poll { proxy_pass http://{{ $odoo_host }}:8072; }
     location /longpolling/poll { proxy_pass http://{{ $odoo_host }}:8072; }
+    location /websocket { proxy_pass http://{{ $odoo_host }}:8072; }
 
     location /monitoring/status {
       proxy_pass http://{{ $odoo_host }}:8069;
