--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -30,8 +30,8 @@ http {
    '"response": $status, '
    '"bytes": $body_bytes_sent, '
    '"time_request": $request_time, '
-   '"time_backend_connect": $upstream_connect_time, '
-   '"time_backend_response": $upstream_response_time, '
+   '"time_backend_connect": "$upstream_connect_time", '
+   '"time_backend_response": "$upstream_response_time", '
    '"cache": "$upstream_cache_status", '
    '"referrer": "$http_referer", '
    '"agent": "$http_user_agent" }';
