--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -36,6 +36,11 @@ http {
    '"referrer": "$http_referer", '
    '"agent": "$http_user_agent" }';
 
+  log_format prometheus_exporter '$remote_addr - $remote_user [$time_local] '
+   '"$request" "$request_id" $status "$upstream_cache_status" $body_bytes_sent '
+   '"$http_referer" "$http_user_agent" "$http_x_forwarded_for" '
+   'rt=$request_time uct="$upstream_connect_time" uht="$upstream_header_time" urt="$upstream_response_time"';   
+
   #Default value '4 8k' is raising a '414 Request-URI Too Large' error
   #when '/web/webclient/translations/' is requested with a lot of module names
   #as GET parameters (performed on user login), rendering a blank page.
@@ -77,7 +82,7 @@ http {
   proxy_max_temp_file_size  2048m;
   proxy_temp_file_write_size  64k;
 
-  proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=one:100m inactive=60m;
+  proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=one:{{ getenv "NGX_CACHE_SIZE" }} inactive=60m;
 
   include /etc/nginx/proxy_headers.conf;
 
@@ -93,7 +98,7 @@ http {
 
     client_max_body_size 1G;
 
-    add_header Strict-Transport-Security "max-age=600; includeSubDomains" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     access_log /var/log/nginx/access.log json_combined;
 
@@ -148,7 +153,6 @@ http {
       try_files =404 @cached;
     }
 
-    include /etc/nginx/specific_cache.conf;
 
     # warning: /web/content reads ir.attachment, it would not be safe to
     # cache other files than .js / .css which can depend on users rights
@@ -182,5 +186,9 @@ http {
 
       proxy_pass http://{{ $odoo_host }}:8069;
     }
+
+    include /etc/nginx/prometheus_eporter.conf;
+
+    include /etc/nginx/specific_server_config.conf;
   }
 }
