--- a/9.0/templates/nginx.conf.tmpl
+++ b/9.0/templates/nginx.conf.tmpl
@@ -1,9 +1,8 @@
-user  nginx;
 
 worker_rlimit_nofile 1024;
 worker_processes 1;
 
-pid        /var/run/nginx.pid;
+pid        /tmp/nginx.pid;
 error_log  /var/log/nginx/error.log;
 
 events {
